# agni

./: .gitignore  CLAUDE.md  LICENSE  README.md  agni.py  pyproject.toml
.claude/commands/: agni-audit.md  agni.md
docs/: index.html
vault/: daily_prompts.json  enneagram.json  enneagram_test.json  sessions.json  system_prompts.json
vault/exercises/core/: fear_inventory.json  five_year_letter.json  morning_ignition.json  sunday_reset.json
vault/exercises/inner_game/: language_audit.json  mental_rehearsal.json  mirror_work.json  pressure_reframe.json  release_ritual.json
vault/exercises/motivation/: inner_motivation.json
vault/exercises/performance/: chip_bank.json  expanded_mission.json  identity_anchor.json  unsatisfiable_standard.json
vault/exercises/reparenting/: ei_pattern_map.json  grief_inventory.json  inner_child_first_contact.json  reparenting_letter.json  sentence_completion.json
