[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agni"
version = "0.1.0"
description = "An encrypted journaling copilot — daily practice, therapy, performance psychology, and targeted exercises with Claude."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Parth Reddy"}]
keywords = ["journal", "journaling", "therapy", "encryption", "claude", "anthropic", "cli", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
agni = "agni:main"

[project.urls]
Homepage = "https://github.com/yourname/agni"

[tool.setuptools]
py-modules = ["agni"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["vault/**/*.json", "CLAUDE.md", ".claude/commands/agni.md"]
